// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`geojsonImport > csv valide avec des virgules 1`] = `
{
  "communes": [],
  "foretIds": [],
  "geojson4326_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -52.54,
              4.22269896902571,
            ],
            [
              -52.55,
              4.22438936251509,
            ],
            [
              -52.55,
              4.24113309117193,
            ],
            [
              -52.54,
              4.22269896902571,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson4326_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point éç",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "geojson_origine_geo_systeme_id": "4326",
  "geojson_origine_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -52.54,
              4.22269896902571,
            ],
            [
              -52.55,
              4.22438936251509,
            ],
            [
              -52.55,
              4.24113309117193,
            ],
            [
              -52.54,
              4.22269896902571,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson_origine_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point éç",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "sdomZoneIds": [],
  "secteurMaritimeIds": [],
  "superposition_alertes": [],
  "surface": 1.03,
}
`;

exports[`geojsonImport > csv valide en 2972 1`] = `
{
  "communes": [],
  "foretIds": [],
  "geojson4326_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -40.598937151159184,
              61.54628068732175,
            ],
            [
              -40.37064788704864,
              61.5292784396591,
            ],
            [
              -40.41816675268371,
              61.507313698979104,
            ],
            [
              -40.598937151159184,
              61.54628068732175,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson4326_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -40.598937151159184,
            61.54628068732175,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -40.37064788704864,
            61.5292784396591,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -40.41816675268371,
            61.507313698979104,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point C",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "geojson_origine_geo_systeme_id": "2972",
  "geojson_origine_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              1051195.1083143658,
              6867800.046355472,
            ],
            [
              1063526.39792456,
              6867885.978687251,
            ],
            [
              1061421.0557959902,
              6865050.211738565,
            ],
            [
              1051195.1083143658,
              6867800.046355472,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson_origine_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            1051195.1083143658,
            6867800.046355472,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            1063526.39792456,
            6867885.978687251,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            1061421.0557959902,
            6865050.211738565,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point C",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "sdomZoneIds": [],
  "secteurMaritimeIds": [],
  "superposition_alertes": [],
  "surface": 17.27,
}
`;

exports[`geojsonImport > csv valide en 4326 1`] = `
{
  "communes": [],
  "foretIds": [],
  "geojson4326_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -52.54,
              4.22269896902571,
            ],
            [
              -52.55,
              4.22438936251509,
            ],
            [
              -52.55,
              4.24113309117193,
            ],
            [
              -52.54,
              4.22269896902571,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson4326_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point éç",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "geojson_origine_geo_systeme_id": "4326",
  "geojson_origine_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -52.54,
              4.22269896902571,
            ],
            [
              -52.55,
              4.22438936251509,
            ],
            [
              -52.55,
              4.24113309117193,
            ],
            [
              -52.54,
              4.22269896902571,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson_origine_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point éç",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "sdomZoneIds": [],
  "secteurMaritimeIds": [],
  "superposition_alertes": [],
  "surface": 1.03,
}
`;

exports[`geojsonImport > csv valide en 4326 avec les anciens headers 1`] = `
{
  "communes": [],
  "foretIds": [],
  "geojson4326_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -52.54,
              4.22269896902571,
            ],
            [
              -52.55,
              4.22438936251509,
            ],
            [
              -52.55,
              4.24113309117193,
            ],
            [
              -52.54,
              4.22269896902571,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson4326_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point éç",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "geojson_origine_geo_systeme_id": "4326",
  "geojson_origine_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -52.54,
              4.22269896902571,
            ],
            [
              -52.55,
              4.22438936251509,
            ],
            [
              -52.55,
              4.24113309117193,
            ],
            [
              -52.54,
              4.22269896902571,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson_origine_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point éç",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "sdomZoneIds": [],
  "secteurMaritimeIds": [],
  "superposition_alertes": [],
  "surface": 1.03,
}
`;

exports[`geojsonImport > fichier valide geojson 2154 1`] = `
{
  "communes": [],
  "foretIds": [],
  "geojson4326_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              7.785447944275908,
              48.81446215755622,
            ],
            [
              7.953116703424841,
              48.80839897772424,
            ],
            [
              7.922100156138546,
              48.784128049338925,
            ],
            [
              7.785939585784082,
              48.78153599978831,
            ],
            [
              7.697613836339629,
              48.80246529009569,
            ],
            [
              7.73006761550998,
              48.817829852380825,
            ],
            [
              7.785447944275908,
              48.81446215755622,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson4326_points": null,
  "geojson_origine_geo_systeme_id": "2154",
  "geojson_origine_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              1051195.1083143658,
              6867800.046355472,
            ],
            [
              1063526.39792456,
              6867885.978687251,
            ],
            [
              1061421.0557959902,
              6865050.211738565,
            ],
            [
              1051452.9053097009,
              6864147.922254892,
            ],
            [
              1044836.1157627675,
              6866081.399719905,
            ],
            [
              1047113.3225548939,
              6867928.94485314,
            ],
            [
              1051195.1083143658,
              6867800.046355472,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson_origine_points": null,
  "sdomZoneIds": [],
  "secteurMaritimeIds": [],
  "superposition_alertes": [],
  "surface": 51.48,
}
`;

exports[`geojsonImportForages > csv valide en 2972 1`] = `
{
  "geojson4326": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -40.598937151159184,
            61.54628068732175,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
          "profondeur": 12.12,
          "type": "rejet",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -40.37064788704864,
            61.5292784396591,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
          "profondeur": 12.12,
          "type": "captage",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "origin": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            1051195.1083143658,
            6867800.046355472,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
          "profondeur": 12.12,
          "type": "rejet",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            1063526.39792456,
            6867885.978687251,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
          "profondeur": 12.12,
          "type": "captage",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
}
`;

exports[`geojsonImportForages > csv valide en iso-8859-1 1`] = `
{
  "geojson4326": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -40.598937151159184,
            61.54628068732175,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "Piézomètre A",
          "profondeur": 12.12,
          "type": "rejet",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "origin": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            1051195.1083143658,
            6867800.046355472,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "Piézomètre A",
          "profondeur": 12.12,
          "type": "rejet",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
}
`;
